--- a/TODO
+++ b/TODO
@@ -25,3 +25,4 @@ LANGUAGE
   + postfix increment/decrement
   + prefix increment/decrement
   + function arguments which look like ids but transform into strings
+  + allow forward references (hoisting) of functions and classes
