--- a/TODO
+++ b/TODO
@@ -6,7 +6,6 @@ META
   split standard library into modules
   add a literate Pluto file type (maybe .lpluto)
   make a Windows install script
-  'pluto get ...' command to install a package
   'pluto publish' command to publish a package
 
 LANGUAGE
@@ -24,9 +23,8 @@ LANGUAGE
   + a special string interpolation syntax?
   + a regex literal?
   + macros (matches and transforms part of an AST)?
-  + postfix increment/decrement
-  + prefix increment/decrement
   + function arguments which look like ids but transform into strings
   + hoisting of functions and classes
   + 'import "..." as "..."' statements
-  + 'import "fn $ pattern", ... from "..."' statements 
+  + 'import "fn $ pattern", ... from "..."' statements
+  + c-like for loops
