Add some bytecode-specific TODOs

--- a/TODO
+++ b/TODO
@@ -28,3 +28,8 @@ LANGUAGE
   + 'import "..." as "..."' statements
   + 'import "fn $ pattern", ... from "..."' statements
   + c-like for loops
+
+BYTECODE
+  recursive functions
+  fix REPL
+  implement all language features
