--- a/TODO
+++ b/TODO
@@ -14,6 +14,7 @@ LANGUAGE
   compile Pluto to bytecode to speed up execution?
   allow blocks to be curried
   convert some language constructs to builtins
+  fix map parsing
 
   + type conversions
   + list and map comprehensions
